--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,10 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "flask (==2.0.0)"
+    "requests (>=2.32.3,<3.0.0)",
+    "python-dotenv (>=1.1.0,<2.0.0)",
+    "flask (>=3.1.0,<4.0.0)",
+    "gunicorn (>=23.0.0,<24.0.0)"
 ]
 
 
